1.5 (unreleased)
----------------

- Nothing changed yet.


1.4 (2013-04-02)
----------------

- fix problem with user role in iteration generation [amleczko]


1.3 (2013-01-30)
----------------
 - move to github [amleczko]